--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,10 @@
+// project var
+
+$primary: #84bd00;
+
 // @import "madsauce";
 @import "madsauce-css";
+// modules
+@import "modules/index";
+// partials
 @import "partial/index";
