Clean up and directional change

--- a/src/scss/partial/_three-point.scss
+++ b/src/scss/partial/_three-point.scss
@@ -1,15 +1,13 @@
 .three-point {
-  // background-color: adjust-hue($primary, -10deg);
 
   &--list {
-    // @include justify-content(center);
     @include flexbox;
-    // @include flex-flow(wrap);
-    // @include flex-flow(row);
-    // @include align-content(center);
-    // li {
-    //   text-align: center;
-    // }
+    @include flex-direction(column);
+
+    @include mq($md-screen) {
+      @include flex-direction(row);
+
+    }
   }
 
 }
