Add wave to intro

--- a/src/scss/partial/_three-point.scss
+++ b/src/scss/partial/_three-point.scss
@@ -1,8 +1,14 @@
 .three-point {
 
+  .wave {
+    width:100vw;
+  }
   &--list {
     @include flexbox;
     @include flex-direction(column);
+    li {
+      z-index: 1;
+    }
 
     @include mq($md-screen) {
       @include flex-direction(row);
