--- a/css/main.css
+++ b/css/main.css
@@ -63,14 +63,31 @@ input[type='search'], input[type='text'], input[type='number'], input[type='pass
 .footer-nav li {
   display: inline-block; }
 
-.three-point {
-  background-color: #626855; }
-  .three-point--list {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: -ms-flexbox;
-    display: flex; }
+.three-point .wave {
+  width: 100vw; }
+
+.three-point--list {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: vertical;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column; }
+  .three-point--list li {
+    z-index: 1; }
+  @media screen and (min-width: 48em) {
+    .three-point--list {
+      -webkit-box-direction: normal;
+      -webkit-box-orient: horizontal;
+      -webkit-flex-direction: row;
+      -moz-flex-direction: row;
+      -ms-flex-direction: row;
+      flex-direction: row; } }
 
 .subscribe {
   background-color: #84bd00; }
