--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,8 +1,8 @@
 // project var
 
 $primary: #0a5981;
-$sans-serif-stack: "Roboto Black", -apple-system, BlinkMacSystemFont, system, sans-serif;
-$serif-stack: "Open Sans", -apple-system, BlinkMacSystemFont, system, serif;
+$sans-serif-stack: "Open Sans", -apple-system, BlinkMacSystemFont, system, sans-serif;
+$serif-stack: "Roboto Slab", -apple-system, BlinkMacSystemFont, system, serif;
 
 @import "madsauce";
 // @import "madsauce-css";
