--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,9 @@
 // project var
 
 $primary: #0a5981;
+$accent: #043757;
+$text-color: #404040;
+$background-color: #ffffff;
 $sans-serif-stack: "Open Sans", -apple-system, BlinkMacSystemFont, system, sans-serif;
 $serif-stack: "Roboto Slab", -apple-system, BlinkMacSystemFont, system, serif;
 
