--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,4 +14,5 @@ $serif-stack: "Roboto Slab", -apple-system, BlinkMacSystemFont, system, serif;
 // partials
 @import "partial/index";
 
+// Import tachyons
 @import "index";
