--- a/src/scss/modules/_form.scss
+++ b/src/scss/modules/_form.scss
@@ -1,6 +1,10 @@
 input[type='search'], input[type='text'], input[type='number'], input[type='password'], textarea, input[type='email'] {
 	outline: 0;
-	border: 0;
+	border: 1px solid $grey-light;
+
+  &:focus {
+    border-color: $primary;
+  }
 	border-radius: 4px;
 	color: $grey-dark;
   padding: 0.5rem 1rem;
