--- a/src/scss/modules/_button.scss
+++ b/src/scss/modules/_button.scss
@@ -11,7 +11,7 @@
   border-radius: 4px;
   user-select: none;
   transition: 0.1s border ease-in-out, 0.1s background ease-in-out, 0.1s color ease-in-out;
-
+  font-size: 100%;
   &--primary {
     background-color: $primary;
     color: $white;
