Add sass partials

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,7 @@ $serif-stack: "Roboto Slab", -apple-system, BlinkMacSystemFont, system, serif;
 
 @import "madsauce";
 // @import "madsauce-css";
+@import "susy";
 // modules
 @import "modules/index";
 // partials
