--- a/src/scss/partial/_index.scss
+++ b/src/scss/partial/_index.scss
@@ -3,4 +3,7 @@
 @import "footer";
 @import "three-point";
 @import "subscribe";
+@import "header";
+@import "mockup";
+@import "panel";
 @import "doc/index";
