--- a/src/scss/modules/_form.scss
+++ b/src/scss/modules/_form.scss
@@ -9,4 +9,20 @@ input[type='search'], input[type='text'], input[type='number'], input[type='pass
 	color: $grey-dark;
   padding: 0.5rem 1rem;
   vertical-align: top;
+  margin: 0;
+}
+
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  text-indent: 0.01px;
+  text-overflow: "";
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  border: 1px solid $grey-light;
+  outline: 0;
+  border-radius: 3px;
+  box-shadow: 0 1px 3px rgba($grey, 0.1);
+  font-size: 100%;
+  vertical-align: baseline;
 }
