--- a/src/scss/partial/_panel.scss
+++ b/src/scss/partial/_panel.scss
@@ -1,9 +1,22 @@
 .panel {
   border: 1px solid $grey-lighter;
   border-radius: 3px;
+
   &--title {
     background-color: $grey-lightest;
     border-bottom: 1px solid $grey-lighter;
-    padding: 0.5em;
+    padding: .5em;
+  }
+
+  &--data {
+    color: $grey;
+  }
+
+  &--expert {
+    border-bottom: 1px solid $grey-lighter;
+
+    &:last-child {
+      border: 0;
+    }
   }
 }
