Add label styles

--- a/src/scss/modules/_form.scss
+++ b/src/scss/modules/_form.scss
@@ -26,3 +26,11 @@ select {
   font-size: 100%;
   vertical-align: baseline;
 }
+
+label {
+  display: block;
+  margin: .25em 0;
+  font-size: 100%;
+  line-height: 1.5;
+  vertical-align: baseline;
+}
